[package]
name = "bevy_geppetto"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.11", features = [ "serialize" ] }
bevy-inspector-egui = { git = "https://github.com/KMaheshBhat/bevy-inspector-egui", branch = "feature/bevy_0.11_upgrade" }
clap = { version = "4.3.10", features = ["derive"] }
ron = "0.8"
serde = "1.0.164"
